--- a/src/scss/partials/_based.scss
+++ b/src/scss/partials/_based.scss
@@ -79,7 +79,7 @@ a {
 p,
 span,
 div {
-  font-family: "text", sans-serif;
+  font-family: "text--light", sans-serif;
   font-weight: normal;
   color: v.$text_color;
 }
