--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -39,7 +39,7 @@ $header_padding: 28px;
   appearance: none;
   border: none;
   background-color: $cta_color;
-  padding: 10px vw(408, 50);
+  padding: 10px 30px;
   border-radius: 4px;
   display: flex;
   justify-content: center;
