--- a/src/scss/pages/_productPage.scss
+++ b/src/scss/pages/_productPage.scss
@@ -41,7 +41,7 @@
         order: 1;
         font-size: 16px;
         overflow-y: scroll;
-        font-family: 'text--light', sans-serif
+        // font-family: 'text--light', sans-serif
       }
       .price_container {
         order: 2;
