--- a/src/scss/pages/_welcome.scss
+++ b/src/scss/pages/_welcome.scss
@@ -1,13 +1,15 @@
 @use '../partials/variables' as v;
 
 .welcome {
-  height: calc(100vh - #{v.$header_height});
+  // height: calc(100vh - #{v.$header_height});
+  height: -webkit-fill-available;
   .wrapper {
-    height: 100%;
+    height: -webkit-fill-available;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-bottom: v.$footer_height
     svg {
       height: 40vh;
     }
