--- a/src/scss/partials/_productTile.scss
+++ b/src/scss/partials/_productTile.scss
@@ -1,16 +1,9 @@
 @use 'variables' as *;
-// .listing {
-  .tile_wrapper {
-    max-width: vw(409, 163);
-    @media (max-width: $xs_breakpoint) {
-      max-width: none;
-    }
 
-  }
 .product_tile {
   background-color: $header_color;
   height: 100%;
-  min-height: 220px;
+  // min-height: 220px;
   border-radius: 4px;
   width: 100%;
   .tile {
@@ -24,15 +17,16 @@
       padding: 10px 5px 0 10px;
     }
     .image {
-      flex: 1 1 50%;
+      // flex: 1 1 50%;
       margin: 0 auto;
+      max-height: 150px;
       img {
-        width: 100%;
+        height: 100%;
       }
     }
     .description {
       padding: 19px 10px 15px;
-      flex: 1 1 50%;
+      // flex: 1 1 50%;
       background-color: $details_color;
       border-radius: 4px;
       display: flex;
@@ -42,7 +36,7 @@
       .title {
         // font-family: 'text--light', sans-serif;
         text-align: center;
-        font-size: 20px;
+        font-size: 16px;
         font-style: normal;
         font-weight: 400;
         @media(min-width: $xl_breakpoint) {
@@ -54,8 +48,7 @@
         grid-template-columns: 1fr 1fr;
         
         h4.new_price, h5.old_price {
-          font-size: 20px;
-          font-style: normal;
+          font-size: 16px;
         }
         .new_price {
           color: $promo_color;
@@ -64,7 +57,6 @@
           
           & ~ .old_price {
             text-decoration: line-through;
-            // font-family: 'text--light', sans-serif;
           }
         }
         .old_price {
@@ -73,13 +65,14 @@
           font-style: normal;
         }
       }
-      @media (min-width: $md_breakpoint) {
-      }
     }
   }
-  &:hover {
-    @include shadow;
-    cursor: pointer;
+  
+  @media (min-width: $lg_breakpoint) {
+    &:hover {
+      @include shadow;
+      cursor: pointer;
+    }
   }
 }
 // }
