--- a/src/scss/pages/_cart.scss
+++ b/src/scss/pages/_cart.scss
@@ -123,7 +123,7 @@
   }
   .summary {
     position: fixed;
-    // height: calc($header_height + 244px);
+    height: calc($header_height + 244px);
     bottom: 0;
     right: 0;
     left: 0;
@@ -134,7 +134,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
     gap: 10px;
     .row {
       display: flex;
