--- a/src/scss/pages/_welcome.scss
+++ b/src/scss/pages/_welcome.scss
@@ -1,10 +1,10 @@
 @use '../partials/variables' as v;
 
 .welcome {
-  // height: calc(100vh - #{v.$header_height});
-  height: -webkit-fill-available;
+
+  height: calc(100svh - v.$header_height);
   .wrapper {
-    height: -webkit-fill-available;
+    height: calc(100svh - v.$header_height);
     display: flex;
     flex-direction: column;
     justify-content: center;
