--- a/src/scss/partials/_based.scss
+++ b/src/scss/partials/_based.scss
@@ -31,18 +31,20 @@ body * {
   padding: 0;
 }
 #app {
-  height: -webkit-fill-available;
+  // height: -webkit-fill-available;
+  min-height: 100svh;
 }
-main {
-  // min-height: calc(100vh - (v.$header_height + v.$footer_height));
-  height: -webkit-fill-available;
-  // @media (min-width: $md_breakpoint) {
-  //   min-height: calc(100vh - (v.$header_height));
-  // }
-}
+.relative_element {
+  height: 40px;
+  width: 100%;
+  // position: absolute;
+  bottom: 0;
+  left: 0;
 
+}
 section {
   height: -webkit-fill-available;
+  // min-height: 100svh;
   padding: 20px 15px v.$footer_height;
 }
 
