--- a/src/scss/pages/_cart.scss
+++ b/src/scss/pages/_cart.scss
@@ -99,6 +99,11 @@
                 }
                 &[type="number"] {
                   text-align: center;
+                  &::-webkit-inner-spin-button,
+                  &::-webkit-outer-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
+                  }
 
                   &:disabled {
                     background-color: $cta_color;
@@ -138,7 +143,8 @@
       font-family: "header", sans-serif;
     }
 
-    .total *, .discount * {
+    .total *,
+    .discount * {
       font-family: "text--light", sans-serif;
       font-size: 16px;
     }
@@ -159,7 +165,6 @@
         text-transform: uppercase;
         padding: 10px 45px;
         max-height: none;
-        
       }
       .back {
         min-width: 100px;
